# Files-plus-plus

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build_from_scratch.cmake  preferred-ports-fileplusplus.txt
core/: FSReader.cpp  FSReader.h  Item.cpp  Item.h  MEGA.cpp  MEGA.h  MetaPath.h  Metapath.cpp  PlatformSupplied.h  basictypes.h
windows/: Files++.cpp  Files++.exe.manifest  Files++.h  Files++.rc  Files++.rc2  Files++Dlg.cpp  Files++Dlg.h  FilterDlg.cpp  FilterDlg.h  LocalFSReader.cpp  LocalFSReader.h  PlatformSupplied.cpp  TextDialog.cpp  TextDialog.h  UserPassDialog.cpp  UserPassDialog.h  resource.h  stdafx.cpp  stdafx.h  targetver.h
